# simd_helper

./: CMakeLists.txt  README.md
legacy/simd_helper/: simd_helper.h
simd_helper/: CMakeLists.txt  simd_helper.h  simd_helper_test.cc  simd_matrix.h  simd_scalar.h  soa_container.h
simd_helper/legacy/simd_helper/: memory_aligner.h  simd_matrix.h  simd_scalar_amd.h  simd_scalar_arm.h  simd_vector.h
test/: CMakeLists.txt  calculation_test.cc  main.cc
